--- a/src/main/resources/com/example/familytree/mainScreen.fxml
+++ b/src/main/resources/com/example/familytree/mainScreen.fxml
@@ -4,16 +4,15 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.familytree.mainScreenController">
    <children>
-      <ScrollPane fx:id="scrollPane_familytree" prefHeight="745.0" prefWidth="1200.0">
-        <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
-        </content>
-      </ScrollPane>
-      <Button layoutX="24.0" layoutY="753.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="83.0" text="Geri Dön" />
-      <Button layoutX="886.0" layoutY="753.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="178.0" text="Soy Ağacı İşlemleri" />
-      <Button layoutX="485.0" layoutY="753.0" mnemonicParsing="false" onMouseClicked="#ciz" text="ciz-ardından sil" />
+      <ScrollPane fx:id="scrollPane_familytree" prefHeight="745.0" prefWidth="1200.0" AnchorPane.bottomAnchor="55.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+      <AnchorPane layoutX="-8.0" layoutY="745.0" prefHeight="65.0" prefWidth="1216.0">
+         <children>
+            <Button layoutX="37.0" layoutY="20.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="83.0" text="Geri Dön" />
+            <Button layoutX="529.0" layoutY="20.0" mnemonicParsing="false" onMouseClicked="#ciz" text="ciz-ardından sil" />
+            <Button layoutX="995.0" layoutY="20.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="178.0" text="Soy Ağacı İşlemleri" />
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
