--- a/src/main/resources/com/example/familytree/mainScreen.fxml
+++ b/src/main/resources/com/example/familytree/mainScreen.fxml
@@ -9,9 +9,9 @@
       <ScrollPane fx:id="scrollPane_familytree" prefHeight="745.0" prefWidth="1200.0" AnchorPane.bottomAnchor="55.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
       <AnchorPane layoutX="-8.0" layoutY="745.0" prefHeight="65.0" prefWidth="1216.0" AnchorPane.bottomAnchor="-10.0" AnchorPane.leftAnchor="-8.0" AnchorPane.rightAnchor="-8.0">
          <children>
-            <Button layoutX="37.0" layoutY="20.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="83.0" text="Geri Dön" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="50.0" />
-            <Button layoutX="529.0" layoutY="20.0" mnemonicParsing="false" onMouseClicked="#ciz" text="ciz-ardından sil" AnchorPane.bottomAnchor="25.0" />
-            <Button layoutX="995.0" layoutY="20.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="178.0" text="Soy Ağacı İşlemleri" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="50.0" />
+            <Button layoutX="37.0" layoutY="20.0" mnemonicParsing="false" onMouseClicked="#backToLoginPage" prefHeight="25.0" prefWidth="83.0" text="Geri Dön" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="50.0" />
+            <Button layoutX="529.0" layoutY="20.0" mnemonicParsing="false" onMouseClicked="#ciz" text="Soy Ağacını Çiz" AnchorPane.bottomAnchor="25.0" />
+            <Button layoutX="995.0" layoutY="20.0" mnemonicParsing="false" onMouseClicked="#familyTreeOperations" prefHeight="25.0" prefWidth="178.0" text="Soy Ağacı İşlemleri" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="50.0" />
          </children>
       </AnchorPane>
    </children>
