--- a/src/main/resources/com/example/familytree/treeOperations.fxml
+++ b/src/main/resources/com/example/familytree/treeOperations.fxml
@@ -1,18 +1,108 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.control.TreeView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="500.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.familytree.treeOperationsController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="710.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.familytree.treeOperationsController">
    <children>
-      <Button layoutX="20.0" layoutY="39.0" mnemonicParsing="false" onMouseClicked="#removalwithname" text="Soyağacından İsim İle Kişi Çıkar" />
-      <Button layoutX="264.0" layoutY="39.0" mnemonicParsing="false" onMouseClicked="#personadding" text="Soyağacına Kişi Ekle" />
-      <Button layoutX="19.0" layoutY="131.0" mnemonicParsing="false" onMouseClicked="#searchwithname" text="Soyağacında İsim İle Arama Yap" />
-      <Button layoutX="283.0" layoutY="90.0" mnemonicParsing="false" onMouseClicked="#searchwithid" text="id İle Arama Yap" />
-      <TextField fx:id="operationTextfield" visible="false" layoutX="129.0" layoutY="238.0" />
-      <Button layoutX="20.0" layoutY="90.0" mnemonicParsing="false" onMouseClicked="#removalwithid" text="Soyağacından id ile Kişi Çıkar" />
-      <Button layoutX="218.0" layoutY="131.0" mnemonicParsing="false" onMouseClicked="#findingleafs" text="Soyağacındaki Yaprakları Bul" />
+      <TreeView fx:id="treeViewfamilytree" fixedCellSize="50.0" layoutX="14.0" layoutY="62.0" onContextMenuRequested="#bringinformation" onMouseClicked="#bringinformation" prefHeight="665.0" prefWidth="374.0" />
+      <AnchorPane fx:id="rightAnchor" layoutX="388.0" layoutY="93.0" prefHeight="634.0" prefWidth="309.0">
+         <children>
+            <Label fx:id="Upper_label_2" layoutX="14.0" layoutY="240.0" text="Akrabalar">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+            <TextField fx:id="nameLabel" layoutX="140.0" layoutY="35.0" />
+            <TextField fx:id="surnameLabel" layoutX="140.0" layoutY="85.0" />
+            <Label layoutX="15.0" layoutY="35.0" text="Adı">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Label layoutX="15.0" layoutY="85.0" text="Soyadı">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Label layoutX="15.0" layoutY="135.0" prefHeight="27.0" prefWidth="64.0" text="Cinsiyet">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <RadioButton fx:id="maleRadioButton" layoutX="160.0" layoutY="135.0" mnemonicParsing="false" text="Erkek">
+               <toggleGroup>
+                  <ToggleGroup fx:id="cinsiyetRadioGrup" />
+               </toggleGroup>
+            </RadioButton>
+            <RadioButton fx:id="femaleRadioButton" layoutX="235.0" layoutY="135.0" mnemonicParsing="false" text="Kız" toggleGroup="$cinsiyetRadioGrup" />
+            <Label layoutX="15.0" layoutY="185.0" text="Doğum Tarihi">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <DatePicker fx:id="birthDatePicker" layoutX="133.0" layoutY="186.0" />
+            <Label layoutX="15.0" layoutY="290.0" prefHeight="27.0" prefWidth="64.0" text="Anne">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Label layoutX="15.0" layoutY="340.0" prefHeight="27.0" prefWidth="64.0" text="Baba">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Label layoutX="15.0" layoutY="390.0" prefHeight="27.0" prefWidth="64.0" text="Eş">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Label layoutX="15.0" layoutY="440.0" prefHeight="27.0" prefWidth="72.0" text="Çocuklar">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Label layoutX="15.0" layoutY="520.0" prefHeight="27.0" prefWidth="72.0" text="Torunlar">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <ListView fx:id="kidsListview" layoutX="110.0" layoutY="440.0" prefHeight="62.0" prefWidth="188.0" />
+            <ListView fx:id="grandkidsListView" layoutX="110.0" layoutY="520.0" prefHeight="62.0" prefWidth="188.0" />
+            <ChoiceBox fx:id="fatherChoicebox" layoutX="140.0" layoutY="340.0" prefWidth="150.0" />
+            <ChoiceBox fx:id="motherChoicebox" layoutX="140.0" layoutY="290.0" prefWidth="150.0" />
+            <Label fx:id="partnerLabel" layoutX="141.0" layoutY="390.0" prefHeight="17.0" prefWidth="149.0" text="a">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <ImageView fx:id="partnerImage" fitHeight="35.0" fitWidth="37.0" layoutX="277.0" layoutY="385.0" onMouseClicked="#changePartnerinfo">
+               <image>
+                  <Image url="@images/profile.png" />
+               </image>
+            </ImageView>
+            <Button fx:id="saveChangesButton" layoutX="16.0" layoutY="595.0" mnemonicParsing="false" onMouseClicked="#saveChanges" text="Değişiklikleri Kaydet" visible="false" />
+            <Button layoutX="246.0" layoutY="595.0" mnemonicParsing="false" onMouseClicked="#changeInformations" text="Düzenle" />
+            <Button fx:id="deletePersonButton" layoutX="167.0" layoutY="595.0" mnemonicParsing="false" onMouseClicked="#deletePerson" text="Kişiyi Sil" visible="false" />
+         </children>
+      </AnchorPane>
+      <Label fx:id="left_bottom_label1" layoutX="20.0" layoutY="745.0" />
+      <Button layoutX="16.0" layoutY="20.0" mnemonicParsing="false" onMouseClicked="#backtomainpage" text="Geri Dön" />
+      <Label fx:id="Upper_label_1" layoutX="401.0" layoutY="62.0" text="Lütfen Kişi Seçiniz" AnchorPane.leftAnchor="401.0">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
