--- a/src/main/resources/com/example/familytree/loginScreen.fxml
+++ b/src/main/resources/com/example/familytree/loginScreen.fxml
@@ -6,22 +6,32 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.familytree.loginScreenController">
+<AnchorPane prefHeight="377.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.familytree.loginScreenController">
    <children>
-      <ImageView fitHeight="600.0" fitWidth="400.0">
+      <ImageView fitHeight="419.0" fitWidth="800.0">
          <image>
-            <Image url="@images/girisekrani.jpg" />
+            <Image url="@images/giris_ekrani.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="126.0" fitWidth="137.0" layoutX="132.0" layoutY="92.0">
-         <image>
-            <Image url="@images/family-tree-white.png" />
-         </image>
-      </ImageView>
-      <Label layoutX="115.0" layoutY="247.0" text="Soyağacı İçin Aile Soyismini Giriniz" textFill="WHITE" />
-      <Button layoutX="149.0" layoutY="330.0" mnemonicParsing="false" onMouseClicked="#login" style="-fx-background-color: D2A123;" text="Soyağacına Giriş" />
-      <Button layoutX="150.0" layoutY="502.0" mnemonicParsing="false" onMouseClicked="#createFamilyTree" style="-fx-background-color: D2A123;" text="Soyağacı oluştur" textFill="WHITE" underline="true" />
-      <TextField fx:id="familyName" layoutX="126.0" layoutY="288.0" />
+      <Label layoutX="445.0" layoutY="245.0" text="Soyağacı İçin Aile Soyismini Giriniz" textFill="WHITE">
+         <font>
+            <Font name="Arial Black" size="14.0" />
+         </font></Label>
+      <Button layoutX="484.0" layoutY="311.0" mnemonicParsing="false" onMouseClicked="#login" prefHeight="25.0" prefWidth="173.0" styleClass="girisYapBtn" stylesheets="@css/girisYap.css" text="Soyağacına Giriş Yap" textAlignment="CENTER" textFill="WHITE" AnchorPane.leftAnchor="483.0" AnchorPane.rightAnchor="144.0">
+         <font>
+            <Font name="Arial Black" size="12.0" />
+         </font></Button>
+      <Button fx:id="soyagaciOlusturBtn" layoutX="505.0" layoutY="361.0" mnemonicParsing="false" onMouseClicked="#createFamilyTree" prefHeight="25.0" prefWidth="132.0" styleClass="soyagaciOlusturBtn" stylesheets="@css/girisYap.css" text="Soyağacı oluştur" textFill="WHITE" underline="true">
+         <font>
+            <Font name="Arial Black" size="12.0" />
+         </font></Button>
+      <TextField fx:id="familyName" layoutX="483.0" layoutY="276.0" prefHeight="25.0" prefWidth="173.0" styleClass="girisTextField" stylesheets="@css/girisYap.css" AnchorPane.bottomAnchor="118.0" AnchorPane.leftAnchor="483.0" AnchorPane.rightAnchor="144.0" AnchorPane.topAnchor="276.0" />
+      <Label layoutX="554.0" layoutY="348.0" text="Ya Da" textFill="WHITE">
+         <font>
+            <Font name="Arial" size="12.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
