--- a/src/main/resources/com/example/familytree/partnerInfoScreen.fxml
+++ b/src/main/resources/com/example/familytree/partnerInfoScreen.fxml
@@ -4,36 +4,42 @@
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.familytree.partnerInfoScreenController">
+<AnchorPane prefHeight="400.0" prefWidth="299.0" stylesheets="@css/partner.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.familytree.partnerInfoScreenController">
    <children>
-      <TextField fx:id="partnernameTextfield" layoutX="101.0" layoutY="114.0" />
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="142.0" layoutY="69.0" prefHeight="35.0" prefWidth="54.0" text="Adı" AnchorPane.leftAnchor="142.0" AnchorPane.rightAnchor="142.0">
+      <ImageView fitHeight="400.0" fitWidth="300.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <image>
+            <Image url="@images/partnerInfoBG.png" />
+         </image>
+      </ImageView>
+      <TextField fx:id="partnernameTextfield" layoutX="58.0" layoutY="114.0" AnchorPane.leftAnchor="58.0" AnchorPane.rightAnchor="63.0" />
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="124.0" layoutY="83.0" prefHeight="35.0" prefWidth="30.0" text="Adı" AnchorPane.leftAnchor="124.0" AnchorPane.rightAnchor="137.0">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <Label layoutX="86.0" layoutY="11.0" text="Eş Bilgileri" AnchorPane.leftAnchor="86.0" AnchorPane.rightAnchor="86.0">
+      <Label layoutX="88.0" layoutY="43.0" prefHeight="32.0" prefWidth="136.0" styleClass="akrabalarLabel" stylesheets="@css/kaydetBtn.css" text="Eş Bilgileri" AnchorPane.leftAnchor="88.0" AnchorPane.rightAnchor="82.0">
          <font>
             <Font size="40.0" />
          </font>
       </Label>
-      <TextField fx:id="partnersurnameTextfield" layoutX="101.0" layoutY="194.0" />
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="130.0" layoutY="154.0" text="Soyadı" AnchorPane.leftAnchor="130.0" AnchorPane.rightAnchor="130.0">
+      <TextField fx:id="partnersurnameTextfield" layoutX="58.0" layoutY="180.0" AnchorPane.bottomAnchor="175.0" AnchorPane.leftAnchor="58.0" AnchorPane.rightAnchor="63.0" />
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="104.0" layoutY="156.0" prefHeight="27.0" prefWidth="91.0" text="Soyadı" AnchorPane.leftAnchor="104.0" AnchorPane.rightAnchor="111.0">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="85.0" layoutY="236.0" prefHeight="35.0" prefWidth="178.0" text="Doğum Tarihi" AnchorPane.leftAnchor="85.0" AnchorPane.rightAnchor="85.0">
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="81.0" layoutY="231.0" prefHeight="35.0" prefWidth="178.0" text="Doğum Tarihi" AnchorPane.leftAnchor="81.0" AnchorPane.rightAnchor="89.0">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <DatePicker fx:id="partnerbdateDatepicker" layoutX="88.0" layoutY="279.0" prefHeight="44.0" prefWidth="174.0" />
-      <Button layoutX="14.0" layoutY="361.0" mnemonicParsing="false" onMouseClicked="#dontsaveandlogout" text="Vazgeç ve Çık" />
-      <Button layoutX="256.0" layoutY="361.0" mnemonicParsing="false" onMouseClicked="#saveandlogout" text="Kaydet ve Çık" />
+      <DatePicker fx:id="partnerbdateDatepicker" layoutX="53.0" layoutY="260.0" prefHeight="54.0" prefWidth="196.0" />
+      <Button layoutX="15.0" layoutY="352.0" mnemonicParsing="false" onMouseClicked="#dontsaveandlogout" text="Vazgeç ve Çık" />
+      <Button layoutX="156.0" layoutY="352.0" mnemonicParsing="false" onMouseClicked="#saveandlogout" text="Kaydet ve Çık" />
    </children>
 </AnchorPane>
