--- a/src/main/resources/com/example/familytree/treeOperations.fxml
+++ b/src/main/resources/com/example/familytree/treeOperations.fxml
@@ -22,7 +22,7 @@
             <Image url="@images/2.png" />
          </image>
       </ImageView>
-      <TreeView fx:id="treeViewfamilytree" fixedCellSize="50.0" layoutX="171.0" layoutY="51.0" onContextMenuRequested="#bringinformation" onMouseClicked="#bringinformation" prefHeight="646.0" prefWidth="506.0" AnchorPane.bottomAnchor="3.0" AnchorPane.topAnchor="51.0">
+      <TreeView fx:id="treeViewfamilytree" fixedCellSize="50.0" layoutX="171.0" layoutY="51.0" onContextMenuRequested="#bringinformation" onMouseClicked="#bringinformation" prefHeight="638.0" prefWidth="506.0" AnchorPane.bottomAnchor="11.0" AnchorPane.topAnchor="51.0">
          <stylesheets>
             <URL value="@css/style.css" />
             <URL value="@css/treeview.css" />
@@ -39,8 +39,14 @@
                   <Font name="Arial Bold" size="25.0" />
                </font>
             </Label>
-            <TextField fx:id="nameLabel" layoutX="117.0" layoutY="46.0" prefHeight="25.0" prefWidth="174.0" AnchorPane.bottomAnchor="551.0" AnchorPane.leftAnchor="117.0" AnchorPane.topAnchor="46.0" />
-            <TextField fx:id="surnameLabel" layoutX="119.0" layoutY="101.0" prefHeight="25.0" prefWidth="174.0" AnchorPane.bottomAnchor="505.0" AnchorPane.leftAnchor="119.0" />
+            <TextField fx:id="nameLabel" layoutX="117.0" layoutY="46.0" prefHeight="25.0" prefWidth="174.0" AnchorPane.bottomAnchor="551.0" AnchorPane.leftAnchor="117.0" AnchorPane.topAnchor="46.0">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></TextField>
+            <TextField fx:id="surnameLabel" layoutX="119.0" layoutY="101.0" prefHeight="25.0" prefWidth="174.0" AnchorPane.bottomAnchor="505.0" AnchorPane.leftAnchor="119.0">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></TextField>
             <Label layoutX="16.0" layoutY="37.0" text="Adı:" AnchorPane.bottomAnchor="560.0" AnchorPane.leftAnchor="16.0">
                <font>
                   <Font name="Arial" size="17.0" />
@@ -61,12 +67,12 @@
                   <ToggleGroup fx:id="cinsiyetRadioGrup" />
                </toggleGroup>
                <font>
-                  <Font name="Arial Bold" size="13.0" />
+                  <Font name="Arial Bold" size="14.0" />
                </font>
             </RadioButton>
             <RadioButton fx:id="femaleRadioButton" layoutX="236.0" layoutY="140.0" mnemonicParsing="false" text="Kız" toggleGroup="$cinsiyetRadioGrup" AnchorPane.bottomAnchor="463.0">
                <font>
-                  <Font name="Arial Bold" size="13.0" />
+                  <Font name="System Bold" size="14.0" />
                </font>
             </RadioButton>
             <Label layoutX="15.0" layoutY="185.0" text="Doğum Tarihi:" AnchorPane.bottomAnchor="410.0" AnchorPane.leftAnchor="16.0">
@@ -102,9 +108,9 @@
             </Label>
             <ListView fx:id="kidsListview" layoutX="130.0" layoutY="446.0" prefHeight="88.0" prefWidth="224.0" stylesheets="@css/style.css" AnchorPane.leftAnchor="130.0" AnchorPane.topAnchor="446.0" />
             <ListView fx:id="grandkidsListView" layoutX="132.0" layoutY="546.0" prefHeight="88.0" prefWidth="224.0" stylesheets="@css/style.css" AnchorPane.topAnchor="546.0" />
-            <Label fx:id="partnerLabel" layoutX="141.0" layoutY="410.0" prefHeight="17.0" prefWidth="149.0" text="a" AnchorPane.bottomAnchor="212.0" AnchorPane.topAnchor="382.0">
+            <Label fx:id="partnerLabel" layoutX="142.0" layoutY="389.0" prefHeight="17.0" prefWidth="149.0" styleClass="esLabel" text="a" AnchorPane.bottomAnchor="215.0" AnchorPane.topAnchor="389.0">
                <font>
-                  <Font name="Arial" size="18.0" />
+                  <Font name="Arial Bold" size="16.0" />
                </font>
             </Label>
             <ImageView fx:id="partnerImage" fitHeight="35.0" fitWidth="37.0" layoutX="314.0" layoutY="400.0" onMouseClicked="#changePartnerinfo" AnchorPane.topAnchor="390.0">
@@ -131,5 +137,6 @@
             <Image url="@icons/previous.png" />
          </image>
       </ImageView>
+      <Button layoutX="514.0" layoutY="16.0" mnemonicParsing="false" onMouseClicked="#backtomainpage" stylesheets="@css/style.css" text="Soy Ağacını Çiz" />
    </children>
 </AnchorPane>
